fix alignment issue

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -1352,7 +1352,6 @@ button.primary:hover span:after {
 .home-buy-details5 {
   gap: var(--dl-space-space-twounits);
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
